test/stdlib/array/array-out-of-bounds-access-negative.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func main() -> int {
    var array = Array<int>();
    array.push(42);
    // CHECK: [[@LINE+6]]:18: error: no matching function for call to 'Array<int>.[]' with argument list of type '(int)'
    // CHECK: note: candidate function:
    // CHECK-NEXT: func [](index: uint)
    // CHECK: note: candidate function:
    // CHECK-NEXT: mutating func [](index: uint)
    // CHECK-NOT: note
    return *array[-1];
}
